# nlp

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main_grpc.py  main_rest.py  nlp_engine.py  nlp_service.proto  observability.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
scripts/: export_onnx.py
tests/: test_api.py  test_benchmark.py  test_grpc.py  test_nlp_engine.py  test_observability.py
