[project]
name = "nlp-microservice"
version = "1.0.0"
description = "Hybrid REST + gRPC NLP microservice with semantic caching"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "ANN",    # flake8-annotations
]
ignore = [
    "S101",    # assert used (needed for tests)
    "ANN401",  # dynamically typed expressions (Any)
    "S104",    # bind-all-interfaces in defaults (overridden by .env)
    "RUF001",  # ambiguous unicode in user-facing strings
    "RUF003",  # ambiguous unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["config", "nlp_engine"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=90"
